--- a/style.css
+++ b/style.css
@@ -34,14 +34,13 @@
             background-color: brown;
            color: whitesmoke;
             text-align: center;
-            color:aliceblue;
             padding:40px;
             text-decoration: none;
         }
         .overall{
             border-radius: 20px;
-             margin-left: 20%;
-             margin-right: 20%;
+             margin-left: 10%;
+             margin-right: 30%;
              border:3px solid;
              margin-top: 1%;
              margin-bottom: 1%
@@ -73,4 +72,9 @@
             background-color:white;
             front-size: 18px;
             border-radius: 10px;
+        }
+        aside{
+            margin-left: 75% ;
+            width: 25%;
+            height: 50px;
         }
