--- a/requiredproof.css
+++ b/requiredproof.css
@@ -1,4 +1,5 @@
 .container{
+    background-image: url(image/e.jpg);
 border: 1px solid;
 margin-left: 5%;
 margin-right: 5%;
@@ -6,7 +7,11 @@ text-align: left;
 box-shadow: 0 0 5px 1px ;
 padding: 2%;
 }
+body{
+    background-image: url(image/c.jpg);
+}
 .overall{
+    
     margin-top: 8%;
     border: 1px solid;
     margin-left: 5%;
