--- a/style.css
+++ b/style.css
@@ -52,6 +52,9 @@
         font-size: 90%;
         margin-left: 2%;
         }
+        .usernametopview{
+            float: right;
+        }
         .applicant{
             margin-left: 1%;
             background-color:;
