--- a/residential.css
+++ b/residential.css
@@ -13,6 +13,9 @@ h2 {
     font-size: 20px;
     background: rgba(0, 0, 0, 0.5);
 }
+.usernametopview{
+        color: white;
+}
 h5{
     float: right;
     margin-right: 5%;
