--- a/registration.css
+++ b/registration.css
@@ -45,7 +45,7 @@ body {
     padding: 1.2%;
     border-radius: 2%;
 }
-#number {
+#mobileNo {
     margin-left: 14%;
     padding: 1.2%;
     border-radius: 2%;
@@ -63,7 +63,7 @@ body {
     padding: 2%;
 }
 
-#Username {
+#username {
     margin-left: 21.5%;
     padding: 2%;
     border-radius: 2%;
