--- a/registration.css
+++ b/registration.css
@@ -3,18 +3,16 @@
 }
 
 h1 {
-    color: white;
+    color: black;
     text-align: center;
 }
 
 body {
     box-sizing: border-box;
-    background-color: rgb(109, 167, 63);
     align-items: center;
     background-size: cover;
     margin-left: 5rem;
     background-repeat: no-repeat;
-    background-image: url("image/d.jpg");
 }
 
 .overall {
@@ -36,7 +34,7 @@ body {
 
 #yourname {
     margin-left: 20%;
-    padding: 1%;
+    padding: 1.5%;
     border-radius: 2%;
 }
 
@@ -60,17 +58,17 @@ body {
 #password {
     margin-left: 11%;
     border-radius: 2%;
-    padding: 2%;
+    padding: 1.5%;
 }
 
 #username {
     margin-left: 21.5%;
-    padding: 2%;
+    padding: 1.5%;
     border-radius: 2%;
 }
 
 #confirmpassword {
     border-radius: 2%;
     margin-left: 9%;
-    padding: 2%;
+    padding: 1.5%;
 }
