--- a/requestchange.css
+++ b/requestchange.css
@@ -1,3 +1,6 @@
+*{
+    margin:0px;
+}
 .container{
 background-color: lightsalmon;
 border: 1px solid;
@@ -6,6 +9,24 @@ margin-right: 5%;
 text-align: left;
 box-shadow: 0 0 5px 1px ;
 padding: 2%;
+}
+h2{
+    margin: 10px;
+}
+input{
+    padding: 5px;
+}
+#oldAddress{
+    padding: 20px;
+    margin-left: 57px;
+}
+#changeAddress{
+    padding: 20px;
+    margin-left: 36px;
+}
+button{
+    align-items: center;
+    margin-left: 40%;
 }
 .overall{
     
@@ -23,4 +44,5 @@ padding: 2%;
             padding:40px;
             text-decoration: none;
         }
+                
     
