--- a/admin.css
+++ b/admin.css
@@ -4,7 +4,6 @@
 }
 body  
 {  
-    background-image: url(image/16673.jpg);
    max-width: 100%;
     background-size: cover;
     background-attachment: fixed;
@@ -13,7 +12,7 @@ body
 }  
 h2{
     text-align: center;
-    color: greenyellow;
+    color: rgb(94, 47, 138);
 }
 .login{  
     width: 320px;          
@@ -21,7 +20,7 @@ h2{
     margin-top: 110px;
     height: 200px;
     padding: 80px;  
-    background: rgba(0, 0, 0, 0.5);  
+    background: rgba(175, 91, 91, 0.5);  
     border-radius: 15px ;
     border:5px solid white; 
           
