--- a/loginpage.css
+++ b/loginpage.css
@@ -1,66 +1,47 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: lightsalmon;
   }
-
-  form {
-    border: 3px solid #f1f1f1;
-  }
-
   input[type=text],
   input[type=password] {
+  margin: 10px auto;
     width: 100%;
+    border-radius: 5px;
     padding: 12px 20px;
-    margin: 8px;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
-  }
+}
+.passwordbox{
+margin-top: 15px;
+}
 
+label{
+  color: #2F4F4F;
+  
+  }
   .overall {
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-left: 36%;
+    margin-right: 36%;
   }
-
   h2 {
     text-align: center;
   }
-
   button {
+    border-radius: 5px;
     background-color: #04AA6D;
     color: white;
     padding: 14px 20px;
-    margin: 8px 0;
+    margin-top: 15px;
     border: none;
-    cursor: pointer;
     width: 100%;
   }
-
   button:hover {
     opacity: 0.8;
   }
-
-  .cancelbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: #f44336;
-  }
-
-  .imgcontainer {
-    text-align: center;
-    margin: 24px 0 12px 0;
-  }
-
-  img.avatar {
-    width: 40%;
-    border-radius: 50%;
-  }
-
   .container {
-    padding: 16px;
-  }
-
-  span.psw {
-    float: right;
-    padding-top: 16px;
+    height: auto;
+    width: auto;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 50px;
   }
