--- a/registration.css
+++ b/registration.css
@@ -1,74 +1,34 @@
-* {
-    color: black
-}
-
 h1 {
     color: black;
     text-align: center;
 }
-
 body {
     box-sizing: border-box;
-    align-items: center;
     background-size: cover;
-    margin-left: 5rem;
-    background-repeat: no-repeat;
 }
-
 .overall {
-    margin-left: 20%;
-    margin-right: 20%;
-    border: 2px solid;
-    padding-top: 5%;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-bottom: 5%;
-    background-color: unset;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    margin-left:30%;
+    margin-right:30%;
+    border: 1px solid;
+    padding:5% 5% 5% 5%;
 }
-
+input {
+margin: 10px auto;
+  width: 100%;
+  border-radius: 5px;
+  padding: 12px 20px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
 .button {
-    height: 30px;
-    margin-left: 25%;
-    width: 20%;
-}
-
-#yourname {
-    margin-left: 20%;
-    padding: 1.5%;
-    border-radius: 2%;
-}
-
-#datebirth {
-    margin-left: 16.5%;
-    padding: 1.2%;
-    border-radius: 2%;
-}
-#mobileNo {
-    margin-left: 14%;
-    padding: 1.2%;
-    border-radius: 2%;
-}
-
-#email1 {
-    margin-left: 24%;
-    padding: 1.2%;
-    border-radius: 2%;
-}
-
-#password {
-    margin-left: 11%;
-    border-radius: 2%;
-    padding: 1.5%;
-}
-
-#username {
-    margin-left: 21.5%;
-    padding: 1.5%;
-    border-radius: 2%;
-}
-
-#confirmpassword {
-    border-radius: 2%;
-    margin-left: 9%;
-    padding: 1.5%;
+    border-radius: 5px; 
+    background-color: #04AA6D;
+    color: white;
+    padding: 14px 20px;
+    margin-top: 15px;
+    border: none;
+    width: 100%;
 }
