--- a/requestchange.css
+++ b/requestchange.css
@@ -1,6 +1,14 @@
 *{
     margin:0px;
 }
+#applicantIdNumber{
+    margin-left: 38px;
+
+}
+#aadharNumber{
+    margin-left: 67px;
+
+}
 .container{
 background-color: lightsalmon;
 border: 1px solid;
@@ -10,6 +18,9 @@ text-align: left;
 box-shadow: 0 0 5px 1px ;
 padding: 2%;
 }
+input{
+    margin-left: 10px;
+}
 h2{
     margin: 10px;
 }
@@ -18,7 +29,7 @@ input{
 }
 #oldAddress{
     padding: 20px;
-    margin-left: 57px;
+    margin-left: 112px;
 }
 #changeAddress{
     padding: 20px;
@@ -27,6 +38,9 @@ input{
 button{
     align-items: center;
     margin-left: 40%;
+}
+#mobileNumber{
+    margin-left: 52px;
 }
 .overall{
     
@@ -38,7 +52,7 @@ button{
     text-align: center;
  }
  .navbar{
-            background-color: brown;
+            background-color: rgb(0,119,144);
            color: whitesmoke;
             text-align: center;
             padding:40px;
