--- a/viewlist.css
+++ b/viewlist.css
@@ -1,5 +1,5 @@
 .navbar{
-    background-color: brown;
+    background-color: rgb(0,119,144);
    color: whitesmoke;
     text-align: center;
     padding:40px;
@@ -8,33 +8,34 @@
 *{
 margin:0px;
 }
-#table {
-
-    background-color: burlywood
-
-}
 table {
-    margin-left: 6%;
+    display:block ;
+    margin:auto 8%;
+    border-collapse: collapse;
+    border-color: #696969;
     border-radius: 5px solid;
     border: 1px;
 }
 
+tr:nth-child(even) {
+    background-color: #F2F2F2;
+  }
 .searchBar {
-    background-color: #f1f1c1;
     margin: auto;
-    margin-top: 30px;
+    margin-top: 10px;
     width: 80%;
-    border: 3px solid #8a1818;
     padding: 10px;
 }
 td{
-    padding:8px;
+    padding:15px;
 }
 th{
-    padding:8px;
-    background-color: white;
+    color: white;
+    background-color: #A9A9A9;
+    padding:15px;
 }
 
-h1 {
+h2 {
+    padding: 10px;
     text-align: center;
 }
