--- a/listapplication.css
+++ b/listapplication.css
@@ -1,4 +1,6 @@
-.navbar {
+*{
+    margin: 0px;
+}.navbar {
     background-color: rgb(0,119,144);
     color: whitesmoke;
     text-align: center;
@@ -22,25 +24,22 @@ h2 {
 tr:nth-child(even) {
     background-color: #F2F2F2;
   }
-* {
-    margin: 0px;
-}
-td{
+
+td{ border: 1px solid #ccc;
     text-align: center;
     padding: 15px;
 }
 
-th {
+th { border: 1px solid #ccc;
     color: white;
     background-color: #C0C0C0;
     padding: 19px;
 }
 
 table {
-    display:block ;
-    margin:auto 8%;
+    border: 1px solid #ccc;
+    margin:auto 8% 3%;
     border-collapse: collapse;
     margin-top: 3%;
     border-radius: 3px solid;
-    border: 5px;
 }
