--- a/registration.css
+++ b/registration.css
@@ -4,22 +4,23 @@ h1 {
 }
 body {
     box-sizing: border-box;
-    background-size: cover;
 }
 .overall {
+    border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f2f2f2;
     margin-left:30%;
     margin-right:30%;
-    border: 1px solid;
     padding:5% 5% 5% 5%;
 }
+label{
+    color: #2F4F4F;
+}
 input {
-margin: 10px auto;
+margin: 10px auto 20px;
   width: 100%;
   border-radius: 5px;
   padding: 12px 20px;
-  display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
 }
