--- a/style.css
+++ b/style.css
@@ -5,10 +5,7 @@
             background-color: aquamarine;
         }
         body{
-            box-shadow: 3px;
-            background-repeat: no-repeat;
-            background-color: white;
-            background-size: cover;    
+            box-sizing: border-box;
         }
         img{
             align-items: center;
@@ -19,7 +16,6 @@
             background-color: rosybrown;
         }
         .pan{
-            box-shadow: 3px;
             text-align: center;
             font-size: 2rem;
             color:sienna;
@@ -31,63 +27,46 @@
             padding:40px;
             text-decoration: none;
         }
+        #gender{
+            width: 100%;
+            height:30px; 
+        }
         .overall{
-            width: 60%;
+            background-color: #f2f2f2;
+            padding-right: 7%;
+            padding-left: 7%;
             box-shadow: 3px;
             border-radius: 20px;
-             margin-left: 20%;
+             margin-left: 30%;
              margin-right: 30%;
-             border:3px solid;
+             border: 1px solid #ccc;
              margin-top: 1%;
              margin-bottom: 1%
              }
         .h2{
-            color: blue;
+        color: blue;
         font-size: 90%;
-        margin-left: 2%;
         }
         .usernametopview{
             float: right;
         }
-        .applicant{
-            margin-left: 1%;
-            margin-right: 1%;
-            margin-top: 2%;
-            margin-bottom: 8%;
+          .submit{
+            border-radius: 5px; 
+            background-color: #04AA6D;
+            color: white;
+            padding: 14px 20px;
+            margin-top: 15px;
+            border: none;
+            width: 100%;
         }
-        .residential{
-            color: blue;
-            font-size: 110%
+        label{
+            color: #2F4F4F;
         }
-        .submit{
-            background: rgb(96, 160, 44);
-            color:black; 
-            align-items: center;
-            margin-left: 30%;
-            width: 20%;
-            height: 20px;
-            border: 80%;
-            outline: 80px;
-            height: 20px;
-            background-color:white;
-            border-radius: 10px;
-        }
-        .collectingdata {
-            text-align: center;
-            width: 90%;
-            color: blue;
-      }
       input{
-          padding: 5px;
+            margin: 10px auto 25px;
+              width: 100%;
+              height:30px;
+              border-radius: 5px;
+              border: 1px solid #ccc;
+             padding: 5px;
       }
-      #collectingdata,
-      table,
-      thead,
-      tbody,
-      th,
-      td {
-            border: 1px solid;
-            color: black;
-            margin-left: 5%;
-      }
-        
