--- a/viewlist.css
+++ b/viewlist.css
@@ -9,12 +9,11 @@
 margin:0px;
 }
 table {
-    display:block ;
-    margin:auto 8%;
+
+    margin:auto 8% 5px;
     border-collapse: collapse;
-    border-color: #696969;
+    border: 1px solid #ccc;
     border-radius: 5px solid;
-    border: 1px;
 }
 
 tr:nth-child(even) {
@@ -27,9 +26,11 @@ tr:nth-child(even) {
     padding: 10px;
 }
 td{
+    border: 1px solid #ccc;
     padding:15px;
 }
 th{
+    border: 1px solid #ccc;
     color: white;
     background-color: #A9A9A9;
     padding:15px;
