--- a/editpage.css
+++ b/editpage.css
@@ -1,30 +1,43 @@
-.submitbutton {
-    opacity: 0.5;
-}
-
-.submitbutton:hover {
-    opacity: 1.0;
-}
-
 table {
-    width: 850px;
-    height: 580px;
+    border: 1px solid #ccc;
+    background-color: #f2f2f2;
     margin: auto;
     padding: 20px 20px 20px 20px;
-    border-radius: 20px;
-    border-style: solid;
+    border-radius: 5px;
 }
-
-.submitbutton {
-    margin-top: 1%;
-    margin-bottom: 2%;
+input {
+    margin: 10px auto 20px;
+      width: 100%;
+      border-radius: 5px;
+      padding: 12px 20px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+    .printbutton {
+        text-align: center;
+        box-sizing: border-box;
+        border-radius: 5px; 
+        color: white;
+        border: none;
+    }
+    button{
+        border-radius: 5px; 
+        background-color: #04AA6D;
+        color: white;
+        padding: 10px 10px;
+        margin-top: 15px;
+        border: none;
+        width: 30%;
+       
+    }
+.donebutton {
     text-align: center;
+    border-radius: 5px; 
+    color: white;
+    border: none;
 }
 
 .editpage {
-    box-shadow: 1px;
-    margin-left: 5%;
+    margin-left: 2%;
     margin-top: 2%;
-    border-radius: 1px solid;
-    border: 1px;
 }
