--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
-        h1{
+      *{
+          margin: 0%;
+          padding: 0%;
+      } 
+       h1{
             color:orangered;
             text-align: center;
             font-size: 20px;
@@ -7,48 +11,61 @@
         body{
             box-sizing: border-box;
         }
+        .logout{
+            margin-top: 20px;
+            margin-right: 20px;
+            float: right;
+            padding:10px ;
+            text-decoration: none;
+            background-color: #007790;
+            color: white;
+            border-radius: 51px;
+            }
         img{
-            align-items: center;
-            width:400px;
-            padding-top: 20px;
+            display: inline;
+           margin-left: 30px;
+            width:300px;
+            padding-top: 10px;
+            padding-bottom: 5px;
         }
         .total{
             background-color: rosybrown;
         }
-        .pan{
-            text-align: center;
-            font-size: 2rem;
-            color:sienna;
-        }
         .navbar{
+            margin-bottom: 5px;
+            display: inline-block;
             background-color: rgb(0,119,144);
            color: whitesmoke;
-            text-align: center;
-            padding:40px;
+            text-align:center;
+            padding: 7px 66.9px;
             text-decoration: none;
+            list-style-type: none;
         }
         #gender{
             width: 100%;
-            height:30px; 
+            height:40px; 
+            border: none;
         }
         .overall{
             background-color: #f2f2f2;
-            padding-right: 7%;
-            padding-left: 7%;
+            padding-right: 3%;
+            padding-left: 3%;
             box-shadow: 3px;
-            border-radius: 20px;
-             margin-left: 30%;
-             margin-right: 30%;
+            border-radius: 10px;
+            margin-left: 36%;
+            margin-right: 36%;
              border: 1px solid #ccc;
-             margin-top: 1%;
-             margin-bottom: 1%
+             margin-top: 5%;
+             margin-bottom: 1%;
              }
         .h2{
-        color: blue;
+            margin: 8% auto;
+        color:#2F4F4F;
         font-size: 90%;
         }
         .usernametopview{
             float: right;
+            padding: 20px;
         }
           .submit{
             border-radius: 5px; 
@@ -63,10 +80,10 @@
             color: #2F4F4F;
         }
       input{
+        box-sizing: border-box;
             margin: 10px auto 25px;
               width: 100%;
-              height:30px;
               border-radius: 5px;
               border: 1px solid #ccc;
-             padding: 5px;
+              padding: 12px 20px;
       }
