--- a/listapplication.css
+++ b/listapplication.css
@@ -1,14 +1,23 @@
 *{
     margin: 0px;
 }.navbar {
+    margin-top:5px;
+    margin-bottom: 5px;
+    align-items: center;
+    display: inline-block;
     background-color: rgb(0,119,144);
-    color: whitesmoke;
-    text-align: center;
-    padding: 40px;
+   color: whitesmoke;
+    text-align:center;
+    padding: 7px 63.5px;
+    text-decoration: none;
+    list-style-type: none;
+}a{
+    color:white;
     text-decoration: none;
 }
-a{
-    text-decoration: none;
+button{
+   
+    background-color: #007790;
 }
 h2 {
     text-align: center;
@@ -21,7 +30,7 @@ h2 {
     box-shadow: 5px;
     margin-left: 10%;
 }
-tr:nth-child(even) {
+tr:nth-child(odd) {
     background-color: #F2F2F2;
   }
 
@@ -37,9 +46,8 @@ th { border: 1px solid #ccc;
 }
 
 table {
-    border: 1px solid #ccc;
-    margin:auto 8% 3%;
+    border: 1px  #ccc;
+    margin: 3% auto 3%;
     border-collapse: collapse;
-    margin-top: 3%;
     border-radius: 3px solid;
 }
