--- a/loginpage.css
+++ b/loginpage.css
@@ -1,9 +1,8 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
+body {background-color: #F9E2CA;
   }
   input[type=text],
   input[type=password] {
-  margin: 10px auto;
+  margin: 10px auto 20px;
     width: 100%;
     border-radius: 5px;
     padding: 12px 20px;
@@ -11,20 +10,28 @@ body {
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
+img{
+  width: 40%;
+  padding-left: 80px;
+}
 .passwordbox{
 margin-top: 15px;
 }
 
 label{
   color: #2F4F4F;
-  
   }
   .overall {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 3% 3% 3% 3%;
     margin-left: 36%;
     margin-right: 36%;
   }
-  h2 {
+  h1 {
     text-align: center;
+    color: black;
   }
   button {
     border-radius: 5px;
@@ -39,9 +46,8 @@ label{
     opacity: 0.8;
   }
   .container {
-    height: auto;
-    width: auto;
+    border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f2f2f2;
-    padding: 50px;
+    padding: 5% 5% 5% 5%;
   }
