--- a/registration.css
+++ b/registration.css
@@ -3,15 +3,16 @@ h1 {
     text-align: center;
 }
 body {
+    background-color: #F9E2CA;
     box-sizing: border-box;
 }
 .overall {
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f2f2f2;
-    margin-left:30%;
-    margin-right:30%;
-    padding:5% 5% 5% 5%;
+    margin-left:36%;
+    margin-right:36%;
+    padding:3% 3% 3% 3%;
 }
 label{
     color: #2F4F4F;
