--- a/requestchange.css
+++ b/requestchange.css
@@ -1,62 +1,53 @@
 *{
     margin:0px;
 }
-#applicantIdNumber{
-    margin-left: 38px;
-
-}
-#aadharNumber{
-    margin-left: 67px;
-
-}
 .container{
-background-color: lightsalmon;
-border: 1px solid;
-margin-left: 5%;
-margin-right: 5%;
+    border:1px solid #ccc;
+background-color: #f2f2f2;
+margin-left: 36%;
+margin-right: 36%;
 text-align: left;
-box-shadow: 0 0 5px 1px ;
-padding: 2%;
-}
-input{
-    margin-left: 10px;
+padding: 3% 3% 3% 3%;
+border-radius: 5px;
+margin-bottom: 10px;
 }
 h2{
-    margin: 10px;
+    padding: 50px;
+}
+label{
+    color: #2F4F4F;
 }
 input{
-    padding: 5px;
-}
-#oldAddress{
-    padding: 20px;
-    margin-left: 112px;
-}
-#changeAddress{
-    padding: 20px;
-    margin-left: 36px;
+    border: 1px solid #ccc;
+    border-radius: 5px; 
+     box-sizing: border-box;
+     margin: 10px auto 25px;
+     width: 100%;
+     padding: 12px 20px;
 }
 button{
-    align-items: center;
-    margin-left: 40%;
-}
-#mobileNumber{
-    margin-left: 52px;
+    border-radius: 5px; 
+    background-color: #04AA6D;
+    color: white;
+    padding: 14px 20px;
+    margin-top: 15px;
+    border: none;
+    width: 100%;
 }
 .overall{
-    
-    margin-top: 2%;
-    border: 1px solid;
-    margin-left: 5%;
-    margin-right: 5%;
-    box-shadow: 0 0 5px 1px ;
     text-align: center;
  }
  .navbar{
-            background-color: rgb(0,119,144);
-           color: whitesmoke;
-            text-align: center;
-            padding:40px;
-            text-decoration: none;
-        }
+margin-top: 5px;
+margin-bottom: 5px;
+    align-items: center;
+    display: inline-block;
+    background-color: rgb(0,119,144);
+   color: whitesmoke;
+    text-align:center;
+    padding: 7px 63.6px;
+    text-decoration: none;
+    list-style-type: none;
+}
                 
     
