--- a/viewlist.css
+++ b/viewlist.css
@@ -1,9 +1,11 @@
 .navbar{
+    display: inline-block;
     background-color: rgb(0,119,144);
    color: whitesmoke;
-    text-align: center;
-    padding:40px;
+    text-align:center;
+    padding: 7px 65px;
     text-decoration: none;
+    list-style-type: none;
 }
 *{
 margin:0px;
