--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@
             text-decoration: none;
             background-color: #007790;
             color: white;
-            border-radius: 51px;
+            border-radius: 5px;
             }
         img{
             display: inline;
@@ -32,6 +32,7 @@
             background-color: rosybrown;
         }
         .navbar{
+            margin-top: 15px;
             margin-bottom: 5px;
             display: inline-block;
             background-color: rgb(0,119,144);
