--- a/index.css
+++ b/index.css
@@ -11,11 +11,21 @@
         body{
             box-sizing: border-box;
         }
+        button{
+            border: none;
+            text-decoration: none;
+            background-color:#007790 ;
+        }
+        a{
+            text-align: center;
+            color: white;
+            text-decoration: none;
+        }
         .logout{
             margin-top: 20px;
             margin-right: 20px;
             float: right;
-            padding:10px ;
+            padding: 2px ;
             text-decoration: none;
             background-color: #007790;
             color: white;
@@ -24,7 +34,7 @@
         img{
             display: inline;
            margin-left: 30px;
-            width:300px;
+            width:250px;
             padding-top: 10px;
             padding-bottom: 5px;
         }
@@ -32,13 +42,13 @@
             background-color: rosybrown;
         }
         .navbar{
-            margin-top: 15px;
+            margin-top: 10px;
             margin-bottom: 5px;
             display: inline-block;
             background-color: rgb(0,119,144);
            color: whitesmoke;
             text-align:center;
-            padding: 7px 66.9px;
+            padding: 4px 66.9px;
             text-decoration: none;
             list-style-type: none;
         }
