--- a/listapplication.css
+++ b/listapplication.css
@@ -11,12 +11,19 @@
     padding: 7px 63.5px;
     text-decoration: none;
     list-style-type: none;
-}a{
+}
+img{
+    display: inline;
+   margin-left: 30px;
+    width:250px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+a{
     color:white;
     text-decoration: none;
 }
-button{
-   
+button{   
     background-color: #007790;
 }
 h2 {
