--- a/requestchange.css
+++ b/requestchange.css
@@ -1,6 +1,13 @@
 *{
     margin:0px;
 }
+img{
+    display: inline;
+   margin-left: 30px;
+    width:250px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
 .container{
     border:1px solid #ccc;
 background-color: #f2f2f2;
