--- a/index.css
+++ b/index.css
@@ -21,34 +21,37 @@
             color: white;
             text-decoration: none;
         }
-        .logout{
+        .logout{  
             margin-top: 20px;
             margin-right: 20px;
             float: right;
-            padding: 2px ;
+            padding: 8px ;
             text-decoration: none;
             background-color: #007790;
             color: white;
             border-radius: 5px;
             }
+
+        .logout a {
+            text-align: center;
+            font-size: 10px;
+        }
         img{
             display: inline;
            margin-left: 30px;
             width:250px;
             padding-top: 10px;
-            padding-bottom: 5px;
+            padding-bottom: 2px;
         }
-        .total{
-            background-color: rosybrown;
-        }
-        .navbar{
-            margin-top: 10px;
+        .navbar {
+            margin-top:5px;
             margin-bottom: 5px;
+            align-items: center;
             display: inline-block;
             background-color: rgb(0,119,144);
            color: whitesmoke;
             text-align:center;
-            padding: 4px 66.9px;
+            padding: 8px 66.9px;
             text-decoration: none;
             list-style-type: none;
         }
