--- a/listapplication.css
+++ b/listapplication.css
@@ -6,12 +6,13 @@
     align-items: center;
     display: inline-block;
     background-color: rgb(0,119,144);
-   color: whitesmoke;
+   color: #f5f5f5;
     text-align:center;
-    padding: 7px 63.5px;
+    padding: 7px 63.4px;
     text-decoration: none;
     list-style-type: none;
 }
+
 img{
     display: inline;
    margin-left: 30px;
@@ -23,19 +24,13 @@ a{
     color:white;
     text-decoration: none;
 }
-button{   
+ td button{ 
+    border-radius: 5px;  
     background-color: #007790;
 }
 h2 {
     text-align: center;
     padding: 2%;
-}
-#searchBox {
-    border-radius: 10px;
-    padding: 0.5%;
-    text-align: center;
-    box-shadow: 5px;
-    margin-left: 10%;
 }
 tr:nth-child(odd) {
     background-color: #F2F2F2;
@@ -58,3 +53,31 @@ table {
     border-collapse: collapse;
     border-radius: 3px solid;
 }
+.searchbar .search__input {
+    margin-left: 8%;
+        width: 20%;
+        padding: 12px 24px;
+        font-size: 14px;
+        color: #575756;
+background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
+background-repeat: no-repeat;
+background-position: 95% ;
+background-color:#F2F2F2 ;
+border-radius: 50px;
+border: 1px solid #575756;
+transition: 250ms ;
+}
+
+.searchbar .search__input::placeholder {
+    color: rgba(87, 87, 86, 0.8);
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+}
+.searchbar .search__input:hover,
+.search__input:focus {
+    padding: 12px 0;
+    outline: 0;
+    border: 1px solid transparent;
+    border-bottom: 1px solid #575756;
+    border-radius: 50px;
+} 
