--- a/requestapplication.css
+++ b/requestapplication.css
@@ -39,4 +39,22 @@ a{
 button{
     background-color:#007790 ;
     border-radius: 5px;
+}.navbar {
+    margin-top:5px;
+    margin-bottom: 5px;
+    align-items: center;
+    display: inline-block;
+    background-color: rgb(0,119,144);
+   color: #f5f5f5;
+    text-align:center;
+    padding: 7px 45.6px;
+    text-decoration: none;
+    list-style-type: none;
+}
+img{
+    display: inline;
+   margin-left: 30px;
+    width:250px;
+    padding-top: 10px;
+    padding-bottom: 5px;
 }
