--- a/loginpage.css
+++ b/loginpage.css
@@ -33,6 +33,10 @@ label{
     text-align: center;
     color: black;
   }
+  a{
+    text-decoration: none;
+    color: white;
+  }
   button {
     border-radius: 5px;
     background-color: #04AA6D;
