--- a/editpage.css
+++ b/editpage.css
@@ -13,6 +13,9 @@ input {
       border: 1px solid #ccc;
       box-sizing: border-box;
     }
+    h2{
+        text-align: center;
+    }
     .printbutton {
         text-align: center;
         box-sizing: border-box;
