--- a/requestapplication.css
+++ b/requestapplication.css
@@ -2,6 +2,7 @@
 margin:0px;
 }
 table {
+    margin-left: 90px;
     border-collapse: collapse;
     border: 1px solid #ccc;
     border-radius: 5px solid;
