--- a/adminlistapplication.css
+++ b/adminlistapplication.css
@@ -1,17 +1,27 @@
 *{
     margin: 0px;
-}.navbar {
-    margin-top:5px;
-    margin-bottom: 5px;
-    align-items: center;
-    display: inline-block;
-    background-color: rgb(0,119,144);
-   color: #f5f5f5;
-    text-align:center;
-    padding: 7px 56.6px;
-    text-decoration: none;
-    list-style-type: none;
 }
+.menubar li{
+    margin-left: 180px;
+    color: white;
+    float: left;
+    display: block;
+    list-style-type: none;
+    padding: 20px 35px;
+    }
+    img{
+       margin-left: 30px;
+        width:250px;
+        padding-top: 10px;
+        padding-bottom: 5px;
+    }
+    .menubar{
+        background-color: #F58634;
+        color: white;
+        text-decoration:none;
+        width: 100%;
+        height: 60px;
+    }
 
 img{
     display: inline;
@@ -25,15 +35,16 @@ a{
     text-decoration: none;
 }
  td button{ 
-    border-radius: 5px;  
-    background-color: #007790;
+    border-radius: 5px; 
+    border: none; 
+    background-color: #F4A460;
 }
 h2 {
     text-align: center;
     padding: 2%;
 }
 tr:nth-child(odd) {
-    background-color: #F2F2F2;
+    background-color: #FFF8DC;
   }
 
 td{ border: 1px solid #ccc;
@@ -43,7 +54,7 @@ td{ border: 1px solid #ccc;
 
 th { border: 1px solid #ccc;
     color: white;
-    background-color: #C0C0C0;
+    background-color: #F4A460;
     padding: 19px;
 }
 
@@ -62,7 +73,7 @@ table {
 background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
 background-repeat: no-repeat;
 background-position: 95% ;
-background-color:#F2F2F2 ;
+background-color:#FFF8DC ;
 border-radius: 50px;
 border: 1px solid #575756;
 }
