--- a/adminrequestapplication.css
+++ b/adminrequestapplication.css
@@ -1,6 +1,28 @@
 *{
 margin:0px;
 }
+.menubar li{
+    margin-left: 180px;
+    color: white;
+    float: left;
+    display: block;
+    list-style-type: none;
+    padding: 20px 35px;
+    }
+    img{
+       margin-left: 30px;
+        width:250px;
+        padding-top: 10px;
+        padding-bottom: 5px;
+    }
+    .menubar{
+        background-color: #F58634;
+        color: white;
+        text-decoration:none;
+        width: 100%;
+        height: 60px;
+    }
+
 table {
     margin-left: 90px;
     border-collapse: collapse;
@@ -9,7 +31,7 @@ table {
 }
 
 tr:nth-child(even) {
-    background-color: #F2F2F2;
+    background-color: #FFF8DC;
   }
 .viewBar {
     margin-left: 70px;
@@ -24,7 +46,7 @@ td{
 th{
     border: 1px solid #ccc;
     color: white;
-    background-color: #A9A9A9;
+    background-color: #F4A460;
     padding:15px;
 }
 
@@ -38,20 +60,10 @@ a{
     color: white;
 }
 button{
-    background-color:#007790 ;
+    background-color:#F58634;
+    border: none;
     border-radius: 5px;
     padding: 7px;
-}.navbar {
-    margin-top:5px;
-    margin-bottom: 5px;
-    align-items: center;
-    display: inline-block;
-    background-color: rgb(0,119,144);
-   color: #f5f5f5;
-    text-align:center;
-    padding: 7px 56.6px;
-    text-decoration: none;
-    list-style-type: none;
 }
 img{
     display: inline;
