--- a/requestchange.css
+++ b/requestchange.css
@@ -24,6 +24,14 @@ h2{
 label{
     color: #2F4F4F;
 }
+#status{ border: 1px solid #ccc;
+    border-radius: 5px; 
+     box-sizing: border-box;
+     margin: 10px auto 7px;
+     width: 100%;
+     padding: 12px 20px;
+
+}
 input{
     border: 1px solid #ccc;
     border-radius: 5px; 
@@ -52,7 +60,7 @@ margin-bottom: 5px;
     background-color: rgb(0,119,144);
    color: whitesmoke;
     text-align:center;
-    padding: 7px 44.2px;
+    padding: 7px 56.6px;
     text-decoration: none;
     list-style-type: none;
 }
