--- a/userlist.css
+++ b/userlist.css
@@ -22,12 +22,12 @@ td{
 th{
     border: 1px solid #ccc;
     color: white;
-    background-color: #A9A9A9;
+    background-color:#F4A460;
     padding:15px;
 }
 
 tr:nth-child(even) {
-    background-color: #F2F2F2;
+    background-color: #FFF8DC;
   }
 h2{
     padding: 20px;
@@ -41,17 +41,26 @@ input{
      width: 100%;
      padding: 12px 20px;
 }
- .navbar{
-margin-top: 5px;
-margin-bottom: 5px;
-    align-items: center;
-    display: inline-block;
-    background-color: rgb(0,119,144);
-   color: whitesmoke;
-    text-align:center;
-    padding: 7px 46.7px;
-    text-decoration: none;
+.menubar li{
+    margin-left: 180px;
+    color: white;
+    float: left;
+    display: block;
     list-style-type: none;
-}
+    padding: 20px 35px;
+    }
+    img{
+       margin-left: 30px;
+        width:250px;
+        padding-top: 10px;
+        padding-bottom: 5px;
+    }
+    .menubar{
+        background-color: #F58634;
+        color: white;
+        text-decoration:none;
+        width: 100%;
+        height: 60px;
+    }
                 
     
