--- a/loginpage.css
+++ b/loginpage.css
@@ -54,3 +54,6 @@ label{
     background-color: #f2f2f2;
     padding: 5% 5% 5% 5%;
   }
+  body {
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif; 
+  }
