--- a/adminlistapplication.css
+++ b/adminlistapplication.css
@@ -1,98 +1,94 @@
-*{
-    margin: 0px;
+* {
+  margin: 0px;
 }
-.menubar li{
-    margin-left: 180px;
-    color: white;
-    float: left;
-    display: block;
-    list-style-type: none;
-    padding: 20px 35px;
-    }
-    img{
-       margin-left: 30px;
-        width:250px;
-        padding-top: 10px;
-        padding-bottom: 5px;
-    }
-    .menubar{
-        background-color: #F58634;
-        color: white;
-        text-decoration:none;
-        width: 100%;
-        height: 60px;
-    }
+.menubar li {
+  margin-left: 180px;
+  color: white;
+  float: left;
+  display: block;
+  list-style-type: none;
+  padding: 20px 35px;
+}
+img {
+  display: inline;
+  margin-left: 30px;
+  width: 250px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+}
+.menubar {
+  background-color: #f58634;
+  color: white;
+  text-decoration: none;
+  width: 100%;
+  height: 60px;
+}
 
-img{
-    display: inline;
-   margin-left: 30px;
-    width:250px;
-    padding-top: 10px;
-    padding-bottom: 5px;
+a {
+  color: white;
+  text-decoration: none;
 }
-a{
-    color:white;
-    text-decoration: none;
-}
- td button{ 
-    border-radius: 5px; 
-    border: none; 
-    background-color: #F4A460;
+td button {
+  border-radius: 5px;
+  border: none;
+  background-color: #f4a460;
 }
 h2 {
-    text-align: center;
-    padding: 2%;
+  text-align: center;
+  padding: 2%;
 }
 tr:nth-child(odd) {
-    background-color: #FFF8DC;
-  }
-
-td{ border: 1px solid #ccc;
-    text-align: center;
-    padding: 15px;
+  background-color: #fff8dc;
 }
 
-th { border: 1px solid #ccc;
-    color: white;
-    background-color: #F4A460;
-    padding: 19px;
+td {
+  border: 1px solid #ccc;
+  text-align: center;
+  padding: 15px;
+}
+
+th {
+  border: 1px solid #ccc;
+  color: white;
+  background-color: #f4a460;
+  padding: 19px;
 }
 
 table {
-    border: 1px  #ccc;
-    margin: 3% auto 3%;
-    border-collapse: collapse;
-    border-radius: 3px solid;
+  border: 1px #ccc;
+  margin: 3% auto 3%;
+  border-collapse: collapse;
+  border-radius: 3px solid;
 }
 .searchbar .search__input {
-    margin-left: 8%;
-        width: 20%;
-        padding: 12px 24px;
-        font-size: 14px;
-        color: #575756;
-background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
-background-repeat: no-repeat;
-background-position: 95% ;
-background-color:#FFF8DC ;
-border-radius: 50px;
-border: 1px solid #575756;
+  margin-left: 8%;
+  width: 20%;
+  padding: 12px 24px;
+  font-size: 14px;
+  color: #575756;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: 95%;
+  background-color: #fff8dc;
+  border-radius: 50px;
+  border: 1px solid #575756;
 }
 
 .searchbar .search__input::placeholder {
-    color: rgba(87, 87, 86, 0.8);
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
+  color: rgba(87, 87, 86, 0.8);
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
 }
 .searchbar .search__input:hover,
 .search__input:focus {
-    padding: 12px 0;
-    outline: 0;
-    border: 1px solid transparent;
-    border-bottom: 1px solid #575756;
-    border-radius: 50px;
-    transition: 250ms
-} 
-button{
-    color: white;
-    padding: 6px;
+  padding: 12px 0;
+  outline: 0;
+  border: 1px solid transparent;
+  border-bottom: 1px solid #575756;
+  border-radius: 50px;
+  transition: 250ms;
+}
+button {
+  color: white;
+  padding: 6px;
 }
