--- a/adminlistapplication.css
+++ b/adminlistapplication.css
@@ -2,19 +2,18 @@
   margin: 0px;
 }
 .menubar li {
-  margin-left: 180px;
+  margin-left: 120px;
   color: white;
   float: left;
-  display: block;
   list-style-type: none;
   padding: 20px 35px;
 }
 img {
   display: inline;
   margin-left: 30px;
-  width: 250px;
-  padding-top: 10px;
-  padding-bottom: 5px;
+  width: 300px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 .menubar {
   background-color: #f58634;
@@ -22,6 +21,12 @@ img {
   text-decoration: none;
   width: 100%;
   height: 60px;
+}
+.edit button{
+  background-color:#007790 ;
+}
+.dalete button{
+  background-color:red ;
 }
 
 a {
@@ -61,7 +66,7 @@ table {
   border-radius: 3px solid;
 }
 .searchbar .search__input {
-  margin-left: 8%;
+  margin-left: 4%;
   width: 20%;
   padding: 12px 24px;
   font-size: 14px;
