--- a/loginpage.css
+++ b/loginpage.css
@@ -10,8 +10,10 @@
     box-sizing: border-box;
 }
 img{
-  width: 40%;
-  padding-left: 90px;
+  margin-right: 302px;
+float: right;
+width: 375px;
+
 }
 .passwordbox{
 margin-top: 15px;
@@ -25,8 +27,8 @@ label{
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 3% 3% 3% 3%;
-    margin-left: 36%;
-    margin-right: 36%;
+    margin-left: 20%;
+    margin-right: 50%;
   }
   h1 {
     text-align: center;
