--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@
             margin-right: 36%;
              border: 1px solid #ccc;
              margin-top: 3%;
-             margin-bottom: 1%;
+             margin-bottom: 25px;
              }
         .h2{
             margin: 8% auto;
@@ -81,12 +81,16 @@
             float: right;
             padding: 20px;
         }
+        #gender{
+            margin-top: 10px;
+        }
           .submit{
             border-radius: 5px; 
             background-color: #04AA6D;
             color: white;
             padding: 14px 20px;
             margin-top: 15px;
+            margin-bottom: 15px;
             border: none;
             width: 100%;
         }
@@ -101,3 +105,35 @@
               border: 1px solid #ccc;
               padding: 12px 20px;
       }
+      /* Footer CSS */
+
+      *{
+        margin: 0%;
+        padding:0%;
+    }
+    .footerpage{
+        background-color: #808080;
+        height: 80px;
+    }
+    .footerpage .social a{
+        font-size:20px;
+        width:36px;
+        height:36px;
+        line-height:36px;
+        display:inline-block;
+        text-align:center;
+        border-radius:50%;
+        box-shadow:0 0 0 2px rgba(255,255,255,0.4);
+        margin-left: 20px;
+        color:#fff;
+        opacity:0.75;
+    }
+    .item{
+        margin-left: 500px;
+        padding-top: 10px; 
+    }
+    p{
+        margin-top: 11px;
+        text-align: center;
+        color: #f2f2f2;
+    }
