--- a/requestchange.css
+++ b/requestchange.css
@@ -16,7 +16,7 @@ margin-right: 36%;
 text-align: left;
 padding: 3% 3% 3% 3%;
 border-radius: 5px;
-margin-bottom: 10px;
+margin-bottom: 30px;
 }
 h2{
     padding: 20px;
@@ -60,9 +60,40 @@ margin-bottom: 5px;
     background-color: rgb(0,119,144);
    color: whitesmoke;
     text-align:center;
-    padding: 7px 61.9px;
+    padding: 7px 64.9px;
     text-decoration: none;
     list-style-type: none;
+}
+/* Footer CSS */
+
+*{
+    margin: 0%;
+    padding:0%;
+}
+.footerpage{
+    background-color: #808080;
+    height: 80px;
+}
+.footerpage .social a{
+    font-size:20px;
+        width:36px;
+        height:36px;
+        line-height:36px;
+        display:inline-block;
+        text-align:center;
+        border-radius:50%;
+        box-shadow:0 0 0 2px rgba(255,255,255,0.4);
+        margin-left: 20px;
+        color:#fff;
+}
+.item{
+    margin-left: 500px;
+    padding-top: 10px; 
+}
+p{
+    margin-top: 11px;
+    color: white;
+    text-align: center;
 }
                 
     
