--- a/asset/CSS/index.css
+++ b/asset/CSS/index.css
@@ -55,6 +55,7 @@
             text-decoration: none;
             list-style-type: none;
         }
+
         #gender{
             width: 100%;
             height:40px; 
@@ -107,15 +108,11 @@
       }
       /* Footer CSS */
 
-      *{
-        margin: 0%;
-        padding:0%;
-    }
     .footerpage{
         background-color: #808080;
         height: 80px;
     }
-    .footerpage .social a{
+    .footerpage .social em{
         font-size:20px;
         width:36px;
         height:36px;
@@ -126,9 +123,11 @@
         box-shadow:0 0 0 2px rgba(255,255,255,0.4);
         margin-left: 20px;
         color:#fff;
+       
     }
     .item{
-        margin-left: 500px;
+        
+        margin-left: 515px;
         padding-top: 10px; 
     }
     p{
@@ -136,3 +135,23 @@
         text-align: center;
         color: #f2f2f2;
     }
+    /*----------------tooltip------------------------- */
+    .tooltip {
+        position: relative;
+        display: inline-block;
+          }
+      
+      .tooltip .tooltiptext {
+        visibility: hidden;
+        width: 100px;
+        background-color: #f2f2f2;
+        color: black;
+        text-align: center;
+        border-radius: 4px;
+        position: absolute;
+        z-index: 1;
+      }
+      
+      .tooltip:hover .tooltiptext {
+        visibility: visible;
+      } 
