--- a/asset/CSS/listapplication.css
+++ b/asset/CSS/listapplication.css
@@ -96,7 +96,7 @@ button{
     background-color: #808080;
     height: 80px;
 }
-.footerpage .social a{
+.footerpage .social em{
     font-size:20px;
         width:36px;
         height:36px;
@@ -109,11 +109,46 @@ button{
         color:#fff;
 }
 .item{
-    margin-left: 500px;
+    margin-left: 515px;
     padding-top: 10px; 
 }
+.breadcrumbs{
+    padding: 10px;
+    list-style: none;
+}
+.breadcrumbs ul li{
+    display: inline;
+    
+}.breadcrumbs ul li a{
+    padding: 5px;
+    color: blueviolet;
+}
+.breadcrumbs ul li+li:before {
+    color: black;
+    content: "/\00a0";
+  }
 p{
     margin-top: 11px;
     color: white;
     text-align: center;
 }
+/*----------------tooltip------------------------- */
+.tooltip {
+    position: relative;
+    display: inline-block;
+      }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 100px;
+    background-color: #f2f2f2;
+    color: black;
+    text-align: center;
+    border-radius: 4px;
+    position: absolute;
+    z-index: 1;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  } 
