--- a/asset/CSS/requestchange.css
+++ b/asset/CSS/requestchange.css
@@ -74,7 +74,7 @@ margin-bottom: 5px;
     background-color: #808080;
     height: 80px;
 }
-.footerpage .social a{
+.footerpage .social em{
     font-size:20px;
         width:36px;
         height:36px;
@@ -86,8 +86,25 @@ margin-bottom: 5px;
         margin-left: 20px;
         color:#fff;
 }
+.breadcrumbs{
+    padding: 10px;
+    list-style: none;
+}
+.breadcrumbs ul li{
+    display: inline;
+    float: left;
+    
+}.breadcrumbs ul li a{
+    color: blueviolet;
+    text-decoration: none;
+    padding: 5px;
+}
+.breadcrumbs ul li+li:before {
+    color: black;
+    content: "/\00a0";
+  }
 .item{
-    margin-left: 500px;
+    margin-left: 515px;
     padding-top: 10px; 
 }
 p{
@@ -95,5 +112,25 @@ p{
     color: white;
     text-align: center;
 }
+/*----------------tooltip------------------------- */
+.tooltip {
+    position: relative;
+    display: inline-block;
+      }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 100px;
+    background-color: #f2f2f2;
+    color: black;
+    text-align: center;
+    border-radius: 4px;
+    position: absolute;
+    z-index: 1;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  } 
                 
     
