--- a/asset/CSS/requestapplication.css
+++ b/asset/CSS/requestapplication.css
@@ -86,6 +86,9 @@ p{
     color: #f2f2f2;
 }
 /*----------------tooltip------------------------- */
+.tooltip a{
+    color: white;
+}
 .tooltip {
     position: relative;
     display: inline-block;
