--- a/asset/CSS/requestchange.css
+++ b/asset/CSS/requestchange.css
@@ -1,5 +1,6 @@
 *{
     margin:0px;
+    padding: 0%;
 }
 img{
     display: inline;
@@ -66,10 +67,7 @@ margin-bottom: 5px;
 }
 /* Footer CSS */
 
-*{
-    margin: 0%;
-    padding:0%;
-}
+
 .footerpage{
     background-color: #808080;
     height: 80px;
@@ -104,7 +102,7 @@ margin-bottom: 5px;
     content: "/\00a0";
   }
 .item{
-    margin-left: 515px;
+    margin-left: 485px;
     padding-top: 10px; 
 }
 p{
@@ -113,6 +111,10 @@ p{
     text-align: center;
 }
 /*----------------tooltip------------------------- */
+.tooltip a{
+    color: white;
+    text-decoration: none;
+}
 .tooltip {
     position: relative;
     display: inline-block;
