Skill Gaps Work

--- a/asset/CSS/index.css
+++ b/asset/CSS/index.css
@@ -48,7 +48,7 @@
             position: relative;
         }
         .navbar {
-           
+           clear: both;
             margin-top:5px;
             margin-bottom: 5px;
             align-items: center;
