--- a/asset/CSS/loginpage.css
+++ b/asset/CSS/loginpage.css
@@ -9,14 +9,15 @@
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
-img{
-  margin-right: 302px;
+.sideimage img{
+  width: 100%;
+  margin-right: 282px;
 float: right;
-width: 375px;
+width: 29vw;
 
 }
 .passwordbox{
-margin-top: 15px;
+margin-top: 20px;
 }
 
 label{
@@ -26,7 +27,7 @@ label{
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f2f2f2;
-    padding: 3% 3% 3% 3%;
+    padding: 3% 3%;
     margin-left: 20%;
     margin-right: 50%;
   }
@@ -43,7 +44,7 @@ label{
     background-color: #04AA6D;
     color: white;
     padding: 14px 20px;
-    margin-top: 15px;
+    margin-top: 25px;
     border: none;
     width: 100%;
   }
@@ -56,4 +57,28 @@ label{
     background-color: #f2f2f2;
     padding: 5% 5% 5% 5%;
   }
+  /* Alert */
+  .alert {
+    display: none;
+    float: right;
+    width: 20%;
+padding: 10px;
+background-color: #04AA6D;
+color: white;
+}
+
+.closebtn {
+margin-left: 15px;
+color: white;
+font-weight: bold;
+float: right;
+font-size: 22px;
+line-height: 20px;
+cursor: pointer;
+transition: 0.3s;
+}
+
+.closebtn:hover {
+color: black;
+}
  
