--- a/asset/CSS/index.css
+++ b/asset/CSS/index.css
@@ -3,9 +3,10 @@
           padding: 0%;
       } 
        h1{
+
             color:orangered;
             text-align: center;
-            font-size: 20px;
+            font-size: 2vw;
             background-color: aquamarine;
         }
         body{
@@ -40,14 +41,15 @@
             position:relative;
             display: inline;
            margin-left: 30px;
-            width:250px;
+            width:20vw;
             padding-top: 10px;
-            padding-bottom: 10px;
+           
         }
         header{
             position: relative;
         }
         .navbar {
+            font-size: 1.1vw;
            clear: both;
             margin-top:5px;
             margin-bottom: 5px;
@@ -56,7 +58,7 @@
             background-color: rgb(0,119,144);
            color: whitesmoke;
             text-align:center;
-            padding: 7px 64.9px;
+            padding: 7px 66.8px;
             text-decoration: none;
             list-style-type: none;
         }
@@ -79,28 +81,28 @@
              margin-bottom: 25px;
              }
         .h2{
+            font-size: 1vw;
             margin: 8% auto;
         color:#2F4F4F;
-        font-size: 90%;
+       
         }
-        .usernametopview{
-            float: right;
-            padding: 20px;
-        }
+        
         #gender{
             margin-top: 10px;
         }
           .submit{
+              font-size: 1vw;
             border-radius: 5px; 
             background-color: #04AA6D;
             color: white;
-            padding: 14px 20px;
+            padding: 1vw 1vw;
             margin-top: 15px;
             margin-bottom: 15px;
             border: none;
             width: 100%;
         }
         label{
+            font-size: 1vw;
             color: #2F4F4F;
         }
       input{
@@ -109,7 +111,7 @@
               width: 100%;
               border-radius: 5px;
               border: 1px solid #ccc;
-              padding: 12px 20px;
+              padding: 1vw 1vw;
       }
       /* Footer CSS */
 
@@ -118,7 +120,7 @@
         height: 80px;
     }
     .footerpage .social em{
-        font-size:20px;
+        font-size:1.4vw;
         width:36px;
         height:36px;
         line-height:36px;
