--- a/asset/CSS/service.css
+++ b/asset/CSS/service.css
@@ -3,6 +3,7 @@
             margin: 0%;
         }
         h4{
+            font-size: 1vw;
             margin-bottom: 20px;
         }
 .service{
@@ -39,6 +40,7 @@
         }
         /* Header CSS */
         .navbar {
+            font-size: 1vw;
             text-align:center;
             margin-top:15px;
             margin-bottom: 20px;
